<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="possessive_name">%s\'s</string>
    <string name="possessive_name_s">%s\'</string>
    
    <string name="switch_yes">Yes</string>
    <string name="switch_no">No</string>
    
    <string name="cancel_button">Cancel</string>
    
    <string name="destination_label">Destination</string>
    
    <string name="category_status">Status</string>
    <string name="category_actions">Actions</string>
    
    <string name="status_destination">Set Destination</string>
    <string name="status_go">Go!</string>
    <string name="status_stop">Stop</string>
    
    <string name="screen_notification">Notifications</string>
    <string name="category_notification">Arrival Notification</string>
    <string name="category_notification_tracking">Tracking Notification</string>
    <string name="action_tone">Notification Ringtone</string>
    <string name="notification_priority">Notification Priority</string>
    <string name="action_vibrate">Vibrate</string>
    <string name="action_insistent">Insistent</string>
    <string name="action_insistent_summary">Play sound repeatedly until you respond</string>
    
    <string name="category_sms">SMS</string>
    <string name="sms_enabled">Send SMS</string>
    <string name="sms_contact">Recipient</string>
    <string name="sms_message">Message</string>
    <string name="sms_number_pick_title">%s Numbers</string>
    <string name="sms_no_numbers_title">No Numbers</string>
    <string name="sms_no_numbers_message">%1$s doesn\'t have any numbers stored. Please select another contact or add a number for %2$s.</string>
    
    <string name="default_contact_upper">Contact</string>
    <string name="default_contact_lower">this contact</string>
    
    <string name="silent">Silent</string>
    
    <string name="category_options">Options</string>
    <string name="options_imperial">Imperial Units</string>
    
    <string name="distance_metres">%dm</string>
    <string name="distance_feet">%dft</string>
    
    <string name="notification_awaiting">Awaiting your location&#8230;</string>
    <string name="notification_tracking">%s until destination&#8230;</string>
    <string name="notification_alert_title">Destination approaching!</string>
    <string name="notification_alert_text">Tap to clear.</string>
    
    <string name="search">Search</string>
    <string name="searching">Searching&#8230;</string>
    <string name="search_results">Search Results</string>
    
    <string name="hint_toast">Long press to set destination</string>
    <string name="no_results">No results found</string>
    <string name="no_destination">Please select a destination first. Long press on the screen to set a destination</string>
    <string name="gps_button_on">GPS On</string>
    <string name="gps_button_off">GPS Off</string>
    <string name="gps_on_toast">GPS On</string>
    <string name="gps_off_toast">GPS Off</string>
    <string name="save_button">Save</string>
    <string name="distance_button">Distance</string>
    <string name="my_location_button">My Location</string>
    <string name="search_button">Search</string>
    
    <string name="category_more">More</string>
    <string name="translate">Contribute Translations</string>
    
    <string name="whats_new">What\'s New?</string>
</resources>
