<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search_button"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/save_button"/>
    <item
        android:id="@+id/menu_gps_on"
        android:icon="@drawable/menu_gps_on"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/gps_button_on"/>
    <item
        android:id="@+id/menu_gps_off"
        android:icon="@drawable/menu_gps_off"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/gps_button_off"/>
    <item
        android:id="@+id/menu_distance"
        android:icon="@drawable/menu_distance"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/distance_button"/>
    <item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/my_location_button"/>

</menu>